[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"
name = "boop"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes"] }
winapi = { version = "0.3.9", features = ["combaseapi", "guiddef", "objbase", "sapi51", "winerror", "impl-default"] }
wio = "0.2.2"
